--- a/app/views/scores/_form.html.erb
+++ b/app/views/scores/_form.html.erb
@@ -1,5 +1,5 @@
 <%= form_for @score do |f| %>
-  1 = Outlaw , 2 = Tokyo, 3 = Aztec, 4 = Voyager
+  1 = Outlaw (Portal Mansion) , 2 = Tokyo (Rag Doll), 3 = Aztec (Lost Woods), 4 = Voyager (Bride's Game)
   <%= f.label :Challenge_Number %>
   <%= f.number_field :challengeboard_id %>
   <%= f.label :team_name %>
