--- a/app/views/scores/_form.html.erb
+++ b/app/views/scores/_form.html.erb
@@ -1,5 +1,5 @@
 <%= form_for @score do |f| %>
-  1 = Outlaw (Portal Mansion) , 2 = Tokyo (Rag Doll), 3 = Tomb (Lost Woods), 4 = Voyager (Bride's Game)
+  1 = Outlaw, 2 = Tokyo, 3 = Tomb, 4 = Voyager, 5 = Mansion, 6 = Rag Doll, 7 = Lost Woods, 8 = Bride's Game
   <%= f.label :Challenge_Number %>
   <%= f.number_field :challengeboard_id %>
   <%= f.label :team_name %>
