--- a/app/views/scores/index.html.erb
+++ b/app/views/scores/index.html.erb
@@ -201,7 +201,7 @@ img {
    <div class="column-center">
      <%count = 1 %>
      <div class="demo-card-square mdl-card mdl-shadow--2dp">
-       <img class="image" src="<%= asset_path "tokyo_final.jpg", alt: "Tokyo Logo"%>" link="/tokyo" alt="The Tokyo Heist">
+       <img class="image" src="<%= asset_path "red-scare.jpg", alt: "Tokyo Logo"%>" link="/tokyo" alt="The Tokyo Heist">
      </div>
      <%@tokyo.each do |score|%>
        <div class="demo-card-square mdl-card mdl-shadow--2dp">
@@ -214,7 +214,7 @@ img {
        </div>
        <div class="mdl-card__actions mdl-card--border">
          <a href="/scores/<%=score.id%>" class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect">
-           Tokyo Heist Scoreboard
+           Red Scare Scoreboard
          </a>
        </div>
        </div>
